slider working on click

--- a/beatles-slider.html
+++ b/beatles-slider.html
@@ -6,12 +6,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div id="header"></div>
 	<div class="slider">
-  	<div class="slider-inner">
-    	<img src="http://static.wixstatic.com/media/78b7a4_4b97120959264aa39d99ff0ccb4ca908.jpg_srz_967_1289_85_22_0.50_1.20_0.00_jpg_srz"><img src="https://s-media-cache-ak0.pinimg.com/736x/a6/21/de/a621de1770da715b89050c9d5359675a.jpg"><img src="http://www.sueboswell.com/images/Portraits/paulr2.jpg"><img
-      src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR1HhbpQhFeUIlxaSNCeWRbrvF4oqUNyS-J5GK8p_ILKZAPw6EZkg">
-  	</div>
+  		<div class="slider-inner" id="beatles">
+    		<img src="http://static.wixstatic.com/media/78b7a4_4b97120959264aa39d99ff0ccb4ca908.jpg_srz_967_1289_85_22_0.50_1.20_0.00_jpg_srz"><img src="https://s-media-cache-ak0.pinimg.com/736x/a6/21/de/a621de1770da715b89050c9d5359675a.jpg"><img src="http://www.sueboswell.com/images/Portraits/paulr2.jpg"><img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR1HhbpQhFeUIlxaSNCeWRbrvF4oqUNyS-J5GK8p_ILKZAPw6EZkg">
+  		</div>
 	</div>
+	<div id="instructions"></div>
 	<script src="script.js"></script>
 </body>
 </html>
